src/test/ui/parser/issue-6610.stderr
error: expected `;` or `{`, found `}`
  --> $DIR/issue-6610.rs:3:20
   |
LL | trait Foo { fn a() } //~ ERROR expected `;` or `{`, found `}`
   |                    ^ expected `;` or `{`

error: aborting due to previous error

