src/test/ui/parser/issue-6610.rs
// compile-flags: -Z parse-only

trait Foo { fn a() } //~ ERROR expected `;` or `{`, found `}`

fn main() {}
